force-app/main/default/objects/EYI_Collection_Achievement__c/EYI_Collection_Achievement__c.object-meta.xml
<CustomObject>
    <label>Collection Achievement</label>
    <nameField>
        <label>Collection Achievement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>