force-app/main/default/objects/EYI_Collection_Achievement__c/fields/EY_O_s_At_The_Start_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>EY_O_s_At_The_Start_Of_Month__c</fullName>
    <label>O/s At The Start Of Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>