force-app/main/default/objects/EYI_Collection_Achievement__c/fields/EYI_Achievement_As_Per_CRM_Receipt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Achievement_As_Per_CRM_Receipt__c</fullName>
    <label>Achievement As Per CRM Receipt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>