force-app/main/default/objects/EYI_Collection_Achievement__c/fields/EYI_Collected_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Collected_Amount__c</fullName>
    <label>Collected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>