force-app/main/default/objects/EYI_Collection_Achievement__c/fields/EYI_Demand_To_Be_Raised_1_15__c.field-meta.xml
<CustomField>
    <fullName>EYI_Demand_To_Be_Raised_1_15__c</fullName>
    <label>Demand To Be Raised (1-15)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>