force-app/main/default/objects/EYI_Collection_Achievement__c/fields/EYI_Monthly_Target__c.field-meta.xml
<CustomField>
    <fullName>EYI_Monthly_Target__c</fullName>
    <label>Monthly Target</label>
    <referenceTo>Monthly_Target__c</referenceTo>
    <relationshipLabel>Collection Achievements</relationshipLabel>
    <relationshipName>Collection_Achievements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>