force-app/main/default/objects/EYI_Collection_Achievement__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>Collection Achievements</relationshipLabel>
    <relationshipName>Collection_Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>