force-app/main/default/objects/EYI_Collection_Achievement__c/fields/EYI_RM__c.field-meta.xml
<CustomField>
    <fullName>EYI_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collection_Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>