force-app/main/default/objects/EYI_Collection_Achievement__c/fields/EYI_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>